ent/api/v1: remove unnecessary params from privnet addressing response
The pod name, namespace and UID fields of the private networks
addressing response are simply copied from the request. Hence,
let's get rid of them for simplicity.
